# DSA-Project

./: .gitignore  CMakeLists.txt  README.md  document1.txt  document2.txt  index.json  indexer  indexer.cpp  newIndexer.cpp  newSearcher.cpp  searcher.cpp
Books/: ARoomWithAView.txt  A_journey_over_land_to_India_by_Donald_Campbell.txt  AlicesAdventuresInWonderland.txt  Cape_Cod_by_F._Mitchell.txt  Frankenstein.txt  Great_short_stories,_Volume_3of_3_.txt  LittleWomen.txt  Middlemarch.txt  MobyDick.txt  Oliver_Twist_by_Charles_Dickens.txt  One_thousand_books_for_children.txt  PrideAndPrejudice.txt  Sex_problems_of_man_in_health_and_disease_:_by_Moses_Scholtz.txt  TheBlueCastle.txt  TheScarletLetter.txt  The_Ethics_of_Aristotle_by_Aristotle.txt  The_History_of_the_Peloponnesian_War_by_Thucydides.txt  The_Wonderful_Wizard_of_Oz_by_L._Frank_Baum.txt  The_rhyme_and_reason_of_country_life_:.txt
include/: CustomBookMap.h  IndexHashTable.h  MaxHeap.h  SearchHashTable.h  Trie.h  VictorVector.h
src/: Indexer.cpp  Searcher.cpp
